--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,52 +1,18 @@
 [build-system]
-requires = ["setuptools>=61.0.0", "wheel"]
-build-backend = "setuptools.build_meta"
+requires = ["scikit-build-core", "pybind11"]
+build-backend = "scikit_build_core.build"
 
-[tool.setuptools]
-packages = ["ahl_hall_model"]
+[tool.scikit-build]
+build.verbose = true
+logging.level = "INFO"
 
 [project]
-name = "ahl_hall_model"
+name = "bw_model"
 version = "0.1.0"
-description = "A short description of the project."
-authors = [{ name = "Nesta" }]
-license = { text = "MIT" }
-readme = "README.md"
 requires-python = ">=3.8"
-dependencies = []
+dependencies = ["matplotlib>=3.7.5", "numpy>=1.24.4"]
 
 [dependency-groups]
-dev = ["ipykernel", "jupytext", "nbstripout", "ruff", "pre-commit"]
-
-[tool.ruff]
-line-length = 120
-
-[tool.ruff.lint]
-select = [
-    "ANN", # flake8-annotations
-    "B",   # flake8-bugbear: Likely bugs
-    "C",   # flake8-comprehensions and mccabe complexity
-    "D",   # pydocstyle: Docstring conventions
-    "E",   # pycodestyle: Errors (default)
-    "F",   # pyflakes: Linter
-    "I",   # isort
-    "N",   # pep8-naming: Naming conventions
-    "W",   # pycodestyle: Warnings (default)
+dev = [
+    "pre-commit>=3.5.0",
 ]
-ignore = [
-    "D100", # Warns about missing module-level docstrings
-    "S101", # Warns about assert being removed when compiled
-]
-
-[tool.ruff.lint.isort]
-known-first-party = ["ahl_hall_model"]
-
-[tool.ruff.lint.pydocstyle]
-convention = "google"
-
-[tool.ruff.lint.per-file-ignores]
-"__init__.py" = ["F401", "E402", "D104"]
-
-[tool.ruff.format]
-docstring-code-format = true
-docstring-code-line-length = "dynamic"
