--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,53 @@ build.verbose = true
 logging.level = "INFO"
 
 [project]
-name = "bw_model"
+name = "ahl_hall_model_py"
+authors = [{ name = "Harry Wilde", email = "harry.wilde@nesta.org.uk" }]
 version = "0.1.0"
+description = "A Python wrapper for the R `bw` package Hall model C++ implementation"
 requires-python = ">=3.8"
+readme = "README.md"
+license = "MIT"
 dependencies = ["matplotlib>=3.7.5", "numpy>=1.24.4"]
 
+[project.urls]
+repository = "https://github.com/nestauk/ahl_hall_model_py"
+issues = "https://github.com/nestauk/ahl_hall_model_py/issues"
+
 [dependency-groups]
-dev = [
-    "pre-commit>=3.5.0",
+dev = ["ipykernel", "jupytext", "nbstripout", "ruff", "pre-commit"]
+
+[tool.uv]
+package = true
+
+[tool.ruff]
+line-length = 120
+
+[tool.ruff.lint]
+select = [
+    "ANN", # flake8-annotations
+    "B",   # flake8-bugbear: Likely bugs
+    "C",   # flake8-comprehensions and mccabe complexity
+    "E",   # pycodestyle: Errors (default)
+    "F",   # pyflakes: Linter
+    "I",   # isort
+    "N",   # pep8-naming: Naming conventions
+    "W",   # pycodestyle: Warnings (default)
 ]
+ignore = [
+    "D100", # Warns about missing module-level docstrings
+    "S101", # Warns about assert being removed when compiled
+]
+
+[tool.ruff.lint.isort]
+known-first-party = ["ahl_hall_model_py"]
+
+[tool.ruff.lint.pydocstyle]
+convention = "google"
+
+[tool.ruff.lint.per-file-ignores]
+"__init__.py" = ["F401", "E402", "D104"]
+
+[tool.ruff.format]
+docstring-code-format = true
+docstring-code-line-length = "dynamic"
